# fse_toolkit

./: .gitignore  pyproject.toml
examples/: fpar.ipynb  image.ipynb  npp.ipynb  water_stress.ipynb  weather.ipynb
src/fse_toolkit/: __init__.py  settings.py
src/fse_toolkit/multispectral/: fpar.py  npp.py  scraper.py  temperature.py  utils.py  water_stress.py
src/fse_toolkit/utils/: common.py
