[tool.poetry]
name = "fse-toolkit"
version = "0.1.0"
description = "Forest Carbon Sink Evaluation Toolkit"
authors = ["Hanzel <lin.y.chen109@gmail.com>"]
readme = "README.md"
packages = [{include = "fse_toolkit", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
rasterio = "^1.4.1"
matplotlib = "^3.9.2"
numpy = "^2.1.2"
pandas = "^2.2.3"
pyproj = "^3.7.0"
earthengine-api = "^1.1.3"
geemap = "^0.34.5"
selenium = "^4.25.0"
webdriver-manager = "^4.0.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.3"
ruff = "^0.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191",  # indentation contains tabs
]
